# gestured-meeting

./: README.md  pyproject.toml
gestured-meeting/: __init__.py  __main__.py  arg.py  event.py  ui.py
gestured-meeting/gesture/: __init__.py  base.py  ble.py
gestured-meeting/meeting/: __init__.py
gestured_meeting/: __init__.py  arg.py  ui.py
gestured_meeting/gesture/: base.py  ble.py
gestured_meeting/meeting/: base.py  meet.py  zoom.py
