[tool.poetry]
name = "gestured-meeting"
version = "0.1.0"
description = "Online meeting with gesture."
authors = ["ygkn <2000ygkn0713@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
PyAutoGUI = "^0.9.53"
websocket-client = "^1.2.1"
bleak = "^0.12.1"
bluepy = "^1.3.0"
pystray = "^0.17.3"
Pillow = "^8.3.2"
PyGObject = "^3.42.0"

[tool.poetry.dev-dependencies]
mypy = "^0.910"
flake8 = "^3.9.2"
black = "^21.9b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 79
include = 'src/\.pyi?$'

[flake8]
ignore = "E203, E266, E501, W503, F403, F401"
max-line-length = 79
max-complexity = 18
select = "B,C,E,F,W,T4,B9"
